@@ -9,6 +9,7 @@ NEXT UNRELEASED
 - Add blank page after cover page in PDF. BZ #1050770
 - Fix replaceable override in DB 4.5 XSL. BZ #1054462
 - Store processing instructions. BZ #1045463
+- Add releaseinfo support. BZ #1050789
 
 4.0.0 Wed Dec 18 2013
 - Support DocBook 5 as input format. BZ #1005042
